fix connect spacing

--- a/src/scss/_connect.scss
+++ b/src/scss/_connect.scss
@@ -40,7 +40,7 @@
     textarea {
       max-width: 100%;
       min-width: 100%;
-      height: rem-calc(170px);
+      height: rem-calc(172px);
     }
   }
 
